@@ -6,7 +6,6 @@ import dev.jorel.commandapi.arguments.IntegerArgument;
 import dev.jorel.commandapi.arguments.TextArgument;
 import io.th0rgal.oraxen.OraxenPlugin;
 import io.th0rgal.oraxen.config.Message;
-import io.th0rgal.oraxen.items.OraxenItems;
 import io.th0rgal.oraxen.recipes.CustomRecipe;
 import io.th0rgal.oraxen.recipes.builders.FurnaceBuilder;
 import io.th0rgal.oraxen.recipes.builders.RecipeBuilder;
@@ -18,7 +17,6 @@ import org.apache.commons.lang3.ArrayUtils;
 import org.bukkit.entity.Player;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RecipesCommand {
     public CommandAPICommand getRecipesCommand() {
@@ -39,13 +37,12 @@ public class RecipesCommand {
                 .executes((sender, args) -> {
                     if (sender instanceof Player player) {
                         List<CustomRecipe> recipes = RecipesEventsManager.get().getPermittedRecipes(player);
-                        final String[] oraxenItems = OraxenItems.nameArray();
                         final String param = (String) args[0];
                         if (!"all".equals(param))
                             recipes = recipes
                                     .stream()
                                     .filter(customRecipe -> customRecipe.getName().equals(param))
-                                    .collect(Collectors.toList());
+                                    .toList();
                         if (recipes.isEmpty()) {
                             Message.RECIPE_NO_RECIPE.send(sender);
                             return;
